<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <include
                android:id="@+id/toolbar_layout"
                layout="@layout/toolbar_view" />

            <LinearLayout
                android:id="@+id/lv_heading_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

                <ImageView
                    android:id="@+id/productImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/product_image"
                    android:padding="@dimen/pad_10"
                    android:src="@drawable/ic_placeholder" />

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/pad_4"
                    android:layout_weight="1"
                    android:padding="@dimen/pad_10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_regular" />

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/pad_4"
                    android:layout_weight="1"
                    android:padding="@dimen/pad_10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_regular" />

                <TextView
                    android:id="@+id/productRegularPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/pad_4"
                    android:layout_weight="1"
                    android:padding="@dimen/pad_10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_regular" />

                <TextView
                    android:id="@+id/ProductSalePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/pad_4"
                    android:layout_weight="1"
                    android:padding="@dimen/pad_10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_regular" />

                <TextView
                    android:id="@+id/productColors"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/pad_4"
                    android:layout_weight="1"
                    android:padding="@dimen/pad_10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_regular" />

                <TextView
                    android:id="@+id/productStores"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/pad_4"
                    android:layout_weight="1"
                    android:padding="@dimen/pad_10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_regular" />


            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/lv_heading_view">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad_8"
                    android:layout_weight="1"
                    android:background="@color/colorBlue"
                    android:text="@string/update"
                    android:textColor="@color/white" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad_8"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/delete"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>